--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,16 +1,46 @@
 project:
   type: book
+  preview:
+    port: 1234
 
 book:
   title: "BUQEYE Guide to Emulators in Nuclear Physics"
-  author: "Christian Drischler, Dick Furnstahl, Alberto Garcia, Jordan Melendez, Xilin Zhang"
+  author:
+    - name: Christian Drischler
+      affiliation: Ohio University
+      orcid: 0000-0003-1534-6285
+    - name: Dick Furnstahl
+      affiliation: The Ohio State University
+      orcid: 0000-0002-3483-333X
+    - name: Alberto Garcia
+      affiliation: The Ohio State University
+      orcid:
+    - name: Jordan Melendez
+      affiliation: The Ohio State University
+      orcid: 0000-0003-1359-1594
+    - name: Xilin Zhang
+      affiliation: Michigan State University
+      orcid:
   date: "8/14/2022"
+  cover-image: buqeye_logo_web.png
+  favicon: buqeye_logo_web.png
+  repo-url: "https://github.com/buqeye/frontiers-emulator-review"
+  repo-actions: [source, issue]
+  description: "Supplemental material for our guide to emulators"
+  abstract: "This is the abstract"
   chapters:
     - index.qmd
     - intro.qmd
-    - test.ipynb
+    - model-reduction.qmd
+    - eigen-emulators.qmd
+    - scattering-emulators.qmd
     - summary.qmd
     - references.qmd
+  sidebar:
+    logo: buqeye_logo_web.png
+
+website:
+  title: Test
 
 bibliography: references.bib
 
@@ -19,6 +49,6 @@ format:
     theme: cosmo
   pdf:
     documentclass: scrreprt
-
-
-
+    keep-tex: true
+    include-in-header:
+      - macros.tex
