ajg: added ORCID number

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -14,7 +14,7 @@ book:
       orcid: 0000-0002-3483-333X
     - name: Alberto Garcia
       affiliation: The Ohio State University
-      orcid:
+      orcid: 0000-0003-1723-3225
     - name: Jordan Melendez
       affiliation: The Ohio State University
       orcid: 0000-0003-1359-1594
