--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - jupyter_nbextensions_configurator=0.4.1
   - matplotlib=3.5.3
   - nbconvert=5.6.1
+  - nbclient==0.6.6
   - numpy=1.23.1
   - pandas=1.4.3
   - pip=22.2.2
