adds Xilin's ORCID

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -20,7 +20,7 @@ book:
       orcid: 0000-0003-1359-1594
     - name: Xilin Zhang
       affiliation: Michigan State University
-      orcid:
+      orcid: 0000-0001-9278-5359
   date: "8/14/2022"
   cover-image: buqeye_logo_web.png
   favicon: buqeye_logo_web.png
