--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - pandas=1.4.3
   - pip=22.2.2
   - python=3.9.13
+  - pytest=7.1.3
   - scikit-learn=1.1.2
   - scipy=1.9.0
   - seaborn=0.11.2
