sync's with recent text edits in pdf article

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -41,7 +41,7 @@ book:
     to projection-based, reduced-order emulators for applications in low-energy nuclear physics.
     The term *emulator* refers here to a fast surrogate model
     capable of reliably approximating high-fidelity models.
-    As the general tools employed by these emulators are not yet well known in the nuclear physics community, we discuss variational and Galerkin projection methods, emphasize the benefits of offline-online decompositions, and explore how these concepts lead to emulators for bound and scattering systems that enable fast \& accurate calculations using many different model parameter sets.
+    As the general tools employed by these emulators are not yet well-known in the nuclear physics community, we discuss variational and Galerkin projection methods, emphasize the benefits of offline-online decompositions, and explore how these concepts lead to emulators for bound and scattering systems that enable fast \& accurate calculations using many different model parameter sets.
     We also point to future extensions and applications of these emulators for nuclear physics, guided by the mature field of model (order) reduction.
     All examples discussed here and more are available as interactive, open-source Python code so that practitioners
     can readily adapt projection-based emulators for their own work.
